--- a/phone/SiteDiaryPhone/app/src/main/AndroidManifest.xml
+++ b/phone/SiteDiaryPhone/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+
 
     <application
         android:name=".SiteDiaryApplication"
@@ -34,9 +38,6 @@
             android:exported="false" />
         <activity
             android:name=".ui.work.WorkDetailsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.log.CreateLogActivity"
             android:exported="false" />
     </application>
 
